Three different activitys, each for a different solve method: + Confirm Captchas + Click Captchas + Text Captchas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,10 @@
 <resources>
 
     <string name="app_name">OpenKWSolver</string>
+    <string name="title_activity_text">TextActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_confirm">ConfirmActivity</string>
+    <string name="title_activity_click">ClickActivity</string>
 
 </resources>
