--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,11 +2,10 @@
 <resources>
 
     <string name="app_name">OpenKWSolver</string>
+
     <string name="title_activity_text">TextActivity</string>
-    <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_confirm">ConfirmActivity</string>
-    <string name="title_activity_click">ClickActivity</string>
+
     <string name="error_no_api_key_available">No API Key available.</string>
     <string name="error_no_api_key_found">No API Key found.</string>
     <string name="error_api_key_has_been_deactivated">API Key has been deactivated by operator.</string>
@@ -19,4 +18,11 @@
     <string name="error_no_id_found">No ID found.</string>
     <string name="error_incorrect_answer">Incorrect answer.</string>
     <string name="error_not_fast_enough_answered">Not fast enough answered (Wrong UserID).</string>
+
+    <string name="button_pull">Pull</string>
+    <string name="button_send">Send</string>
+    <string name="button_skip">Skip</string>
+
+    <string name="checkbox_debug">Debug</string>
+    <string name="checkbox_selfonly">Self only</string>
 </resources>
