--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">OpenKWSolver</string>
 
     <string name="title_activity_text">Text Löser</string>
+    <string name="title_activity_preference">Einstellungen</string>
+
     <string name="action_settings">Einstellungen</string>
 
     <string name="error_no_api_key_available">Kein API Key vorhanden.</string>
