--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_preference">Preferences</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_stop">Stop</string>
 
     <string name="error_no_api_key_available">No API Key available.</string>
     <string name="error_no_api_key_found">No API Key found.</string>
