--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,8 +54,13 @@
     <string name="pref_automation_loop_description">Auto-pull next Captcha after skipping or sending</string>
     <string name="pref_automation_loop_time_title">Loop-Timeout</string>
     <string name="pref_automation_loop_time_description">Seconds until pulling the next Captcha</string>
-    
     <string name="pref_automation_balance_title">Auto updating balance</string>
     <string name="pref_automation_balance_description">Update the balance automatically every 5 seconds</string>
 
+    <string name="pref_layout_captcha_size_title">Captcha-Image Size</string>
+    <string name="pref_layout_captcha_id_title">Display current CaptchaID</string>
+
+    <string name="pref_about_github_title">Source Code</string>
+    <string name="pref_about_issue_title">Report Issue</string>
+    <string name="pref_about_mail_title">Mail the developer</string>
 </resources>
