--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,12 +19,9 @@
 
     <string name="app_name">OpenKWSolver</string>
 
-    <string name="title_activity_text">OpenKWSolver</string>
-    <string name="title_activity_preferences">Settings</string>
-
     <string name="action_settings">Settings</string>
     <string name="action_close">Close</string>
-    <string name="action_ok">Ok</string>
+    <string name="action_ok">OK</string>
 
     <string name="main_button_text_start">Start</string>
     <string name="main_button_text_send">Send</string>
