Values: Move hardcoded strings to resources

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,11 +23,14 @@
     <string name="main_button_text_send">Send</string>
     <string name="main_button_text_skip">Skip</string>
     <string name="main_edittext_hint_answer">Answer</string>
-
+    <string name="main_imageview_description">Captcha</string>
     <string name="main_textview_text_balance">Balance:</string>
     <string name="main_textview_text_captcha">Captcha ID:</string>
 
     <string name="main_toast_emptyanswer">Empty answer. Please skip the Captcha instead of sending a empty answer.</string>
+
+    <string name="menu_title_github">Github</string>
+    <string name="menu_title_exit">Exit</string>
 
     <string name="pref_api_key_title">API key</string>
     <string name="pref_api_key_description">Your 9kw API key</string>
